1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libactivity_la_SOURCES,
	libactivity_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-15  Alex Lancaster  <alex@santafe.edu>

	* Action.m (describeFunctionCall): Removed cast of pointer to
	unsigned long.
	(describeMessageArgs): Likewise.

1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* activity.h: Remove DefaultOrder; don't adopt it in CompoundAction.
	Remove example that uses it in ConcurrentGroupType.
	Remove mention of partially ordered sets from ActionGroup, Schedule,
	and Action.
	Remove InternalTimeMultiplier; don't adopt it in SwarmProcess.

	* ActionGroup.h, Schedule.h: Don't declare setDefaultOrder: or
	getDefaultOrder.

	* CompoundAction.m: Don't define setDefaultOrder: or getDefaultOrder.

1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* activity.h: Add/update documentation tags.  Declare
	addLast: and remove: (in using phase).

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* activity.h (ActionType): Added method -activate: anActionType.

1998-05-22  Alex Lancaster  <alex@santafe.edu>

	* activity.h: (getCurrentTime,getTopLevelActivity): Added
	(//#) documentation strings. (_activity_zone, _activity_trace):
	Made existing inline comments into (//G) doc strings:

1998-05-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* CompoundAction.m ([CompoundAction_c -getAutoDrop]): Convert
	the presence of BitAutoDrop in bits to a boolean.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* activity.h: Remove instances of <p> Minor spacing changes to
	methods. 
	(ActionType, ActionCreatingCall, ActionCreatingTo,
	ActionCreatingForEach, ActionCreating, Action, ActionArgs,
	ActionCall, ActionTo, Activity, ForEachActivity,